fixed spacing in book on shelf

--- a/src/www/css/app/books-app.less
+++ b/src/www/css/app/books-app.less
@@ -304,6 +304,7 @@ a.close:hover {
     width: 80px;
     height: 120px;
     margin-top: 48px;
+    margin-bottom: 23px;
     margin-left: 10px;
   }
   #menu {
